[gd_scene load_steps=7 format=3 uid="uid://tg4imfu0hxa6"]

[ext_resource type="Script" path="res://examples/Example.gd" id="1_x8ytn"]
[ext_resource type="PackedScene" uid="uid://ckg5ljrhkbd6h" path="res://wave_manager.tscn" id="2_7pxjv"]
[ext_resource type="PackedScene" uid="uid://bbv3tveqjmvyh" path="res://examples/objectsToSpawn/Cube1.tscn" id="3_7cfno"]
[ext_resource type="PackedScene" uid="uid://c0rnmbdjm1hx3" path="res://examples/models/blue_tower.glb" id="4_gytdg"]
[ext_resource type="PackedScene" uid="uid://oux3fnfhfa4g" path="res://examples/models/red_tower.glb" id="5_dxv6r"]

[sub_resource type="PlaneMesh" id="PlaneMesh_v5itf"]
size = Vector2(10, 10)

[node name="Example" type="Node3D"]
script = ExtResource("1_x8ytn")

[node name="WaveManager" parent="." node_paths=PackedStringArray("generation_container") instance=ExtResource("2_7pxjv")]
generation_container = NodePath("..")
spawn_locations = Array[Vector3]([Vector3(2, 0.35, -5), Vector3(-2, 0.35, -5)])
scenes_to_spawn = Array[PackedScene]([ExtResource("3_7cfno"), ExtResource("3_7cfno"), ExtResource("3_7cfno"), ExtResource("3_7cfno")])
auto_start = true
seconds_between_waves = 4.0
seconds_between_mini_waves = 0.75

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.51441, 0.857545, 0, -0.857545, 0.51441, 0, 2.47156, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.927758, 0.373182, 0, -0.373182, 0.927758, 0, 3, 2.463)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_v5itf")

[node name="WaveTimer" type="Label" parent="."]
offset_top = 36.0
offset_right = 40.0
offset_bottom = 59.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Spawn entities in lines"

[node name="blue_tower" parent="." instance=ExtResource("4_gytdg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -6)

[node name="red_tower" parent="." instance=ExtResource("5_dxv6r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -6)

[connection signal="entity_created" from="WaveManager" to="." method="_on_wave_manager_entity_created"]
